--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
-    "eslint": "^7.32.0",
+    "eslint": "8.47.0",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^2.5.1",
+    "tsconfig": "workspace:*",
+    "prettier": "3.0.1",
     "turbo": "latest"
   },
   "packageManager": "pnpm@8.6.10",
