--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+.idea
+.vscode
+
 # dependencies
 node_modules
 .pnp
@@ -11,7 +14,6 @@ coverage
 # next.js
 .next/
 out/
-build
 
 # misc
 .DS_Store
@@ -34,3 +36,4 @@ yarn-error.log*
 
 # vercel
 .vercel
+dist
